Filter some predictions

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -9,10 +9,10 @@
     "- exclude series_ids that aren't labeleled at all\n",
     "- there are series (at least 7) that contain night events but there are no labels at these nights; examples: 03d92c9f6f8a, 05e1944c3818\n",
     "try to find and exclude that nights\n",
+    "- something wrong with submission file (creates steps that aren't exist)\n",
     "\n",
     "- different model type (detr2D, spec1D)\n",
-    "\n",
-    "- different optimizer (Lion, Adam, SGD), increase WD\n",
+    "- different optimizer (Adam, SGD), increase WD\n",
     "- offset 25, 30 for your best model\n",
     "- train on full data\n",
     "\n",
@@ -29,40 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
-       "                (function() {\n",
-       "                    if (window.IPython === undefined) {\n",
-       "                        return\n",
-       "                    }\n",
-       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
-       "                        \"jupyter_black in a non-lab notebook with \" +\n",
-       "                        \"`is_lab=True`. Please double check, and if \" +\n",
-       "                        \"loading with `%load_ext` please review the README!\"\n",
-       "                    console.log(msg)\n",
-       "                    alert(msg)\n",
-       "                })()\n",
-       "                </script>\n",
-       "                "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_140508/2658981604.py:42: UserWarning: \n",
+      "/tmp/ipykernel_143377/3816933432.py:38: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -89,18 +63,14 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "INFERENCE = True\n",
+    "INFERENCE = False\n",
     "EXP_NAME = \"transformer_dur_8640_folds\"\n",
     "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
     "\n",
     "if INFERENCE:\n",
     "    RESULT_DIR = Path(\"../output/inference\") / \"transformer_dur_8640_folds\"\n",
-    "    hydra_result_dir = (\n",
-    "        Path(\"../output/train\")\n",
-    "        / \"transformer_dur_8640_folds/transformer_dur_8640_sigma_12_folds_0_1_2_4\"\n",
-    "        / \"run3\"\n",
-    "    )\n",
+    "    hydra_result_dir = Path(\"../output/train\") / \"transformer_dur_8640_folds\" / RUN_NAME\n",
     "else:\n",
     "    RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
     "    hydra_result_dir = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
@@ -145,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.001451376336140042, 1619593)"
+       "(0.7676517604246242, 24252)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +134,84 @@
     "import polars as pl\n",
     "from scipy.signal import find_peaks\n",
     "\n",
-    "pred_df = post_process_for_seg(keys_0, preds, score_th=0.0005, distance=90)\n",
+    "\n",
+    "def post_process_for_seg(\n",
+    "    keys: list[str], preds: np.ndarray, score_th: float = 0.01, distance: int = 5000\n",
+    ") -> pl.DataFrame:\n",
+    "    \"\"\"make submission dataframe for segmentation task\n",
+    "\n",
+    "    Args:\n",
+    "        keys (list[str]): list of keys. key is \"{series_id}_{chunk_id}\"\n",
+    "        preds (np.ndarray): (num_series * num_chunks, duration, 2)\n",
+    "        score_th (float, optional): threshold for score. Defaults to 0.5.\n",
+    "\n",
+    "    Returns:\n",
+    "        pl.DataFrame: submission dataframe\n",
+    "    \"\"\"\n",
+    "    series_ids = np.array(list(map(lambda x: x.split(\"_\")[0], keys)))\n",
+    "    unique_series_ids = np.unique(series_ids)\n",
+    "\n",
+    "    records = []\n",
+    "    for series_id in unique_series_ids:\n",
+    "        series_idx = np.where(series_ids == series_id)[0]\n",
+    "        this_series_preds = preds[series_idx].reshape(-1, 2)\n",
+    "\n",
+    "        onset_event_preds = this_series_preds[:, 0]\n",
+    "        onset_steps = find_peaks(onset_event_preds, height=score_th, distance=distance)[0]\n",
+    "        onset_scores = onset_event_preds[onset_steps]\n",
+    "        min_onset_step = min(onset_steps)\n",
+    "\n",
+    "        wakeup_event_preds = this_series_preds[:, 1]\n",
+    "        wakeup_steps = find_peaks(wakeup_event_preds, height=score_th, distance=distance)[0]\n",
+    "        wakeup_scores = wakeup_event_preds[wakeup_steps]\n",
+    "        max_wakeup_step = max(wakeup_steps)\n",
+    "\n",
+    "        for step, score in zip(onset_steps, onset_scores):\n",
+    "            # select only wakeups than has at least one onset before\n",
+    "            if step >= max_wakeup_step or step <= 720 or step >= len(this_series_preds) - 720 * 8:\n",
+    "                continue\n",
+    "\n",
+    "            records.append(\n",
+    "                {\n",
+    "                    \"series_id\": series_id,\n",
+    "                    \"step\": step,\n",
+    "                    \"event\": \"onset\",\n",
+    "                    \"score\": score,\n",
+    "                }\n",
+    "            )\n",
+    "\n",
+    "        for step, score in zip(wakeup_steps, wakeup_scores):\n",
+    "            # select only onsets than has at least one wakeup after\n",
+    "            if step <= min_onset_step or step <= 720 * 8 or step >= len(this_series_preds) - 720:\n",
+    "                continue\n",
+    "\n",
+    "            records.append(\n",
+    "                {\n",
+    "                    \"series_id\": series_id,\n",
+    "                    \"step\": step,\n",
+    "                    \"event\": \"wakeup\",\n",
+    "                    \"score\": score,\n",
+    "                }\n",
+    "            )\n",
+    "\n",
+    "    if len(records) == 0:  # If there is no prediction, insert dummy\n",
+    "        records.append(\n",
+    "            {\n",
+    "                \"series_id\": series_id,\n",
+    "                \"step\": 0,\n",
+    "                \"event\": \"onset\",\n",
+    "                \"score\": 0,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    sub_df = pl.DataFrame(records).sort(by=[\"series_id\", \"step\"])\n",
+    "    row_ids = pl.Series(name=\"row_id\", values=np.arange(len(sub_df)))\n",
+    "    sub_df = sub_df.with_columns(row_ids).select([\"row_id\", \"series_id\", \"step\", \"event\", \"score\"])\n",
+    "\n",
+    "    return sub_df\n",
+    "\n",
+    "\n",
+    "pred_df = post_process_for_seg(keys, preds, score_th=0.0005, distance=70)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -178,8 +225,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (0.7725863698678378, 46867)\n",
-    "# (0.7820038303398911, 66585)"
+    "# (0.7671295523259689, 24243)\n",
+    "# (0.7676516649051126, 24256) - without 4"
    ]
   },
   {
@@ -313,7 +360,6 @@
     "\n",
     "    return score\n",
     "\n",
-    "\n",
     "study = optuna.create_study(direction=\"maximize\")\n",
     "study.optimize(objective, n_trials=100)\n",
     "\n",
@@ -401,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -426,21 +472,14 @@
      "text": [
       "Global seed set to 42\n",
       "[5.0GB(+3.9GB):1.9sec] load test dataloader \n",
-      "Error executing job with overrides: ['dir=local', 'model.params.encoder_name=resnet34', 'model.params.encoder_weights=null', 'num_workers=12', 'exp_name=transformer_dur_8640_folds', 'weight.run_name=single', 'batch_size=8', 'duration=8640', 'downsample_rate=2', 'pp.score_th=0.0001', 'pp.distance=90', 'phase=train', 'best_model=ensemble']\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/alex/Kaggle/DSS/run/inference.py\", line 142, in main\n",
-      "    models = load_model(cfg, weights)\n",
-      "  File \"/home/alex/Kaggle/DSS/run/inference.py\", line 55, in load_model\n",
-      "    model.load_state_dict(torch.load(weight_path))\n",
-      "  File \"/home/alex/Kaggle/DSS/.venv/lib/python3.10/site-packages/torch/nn/modules/module.py\", line 2152, in load_state_dict\n",
-      "    raise RuntimeError('Error(s) in loading state_dict for {}:\\n\\t{}'.format(\n",
-      "RuntimeError: Error(s) in loading state_dict for Spec2DCNN:\n",
-      "\tMissing key(s) in state_dict: \"feature_extractor.fc.weight\", \"feature_extractor.fc.bias\", \"feature_extractor.conv.weight\", \"feature_extractor.conv.bias\", \"feature_extractor.lstm.weight_ih_l0\", \"feature_extractor.lstm.weight_hh_l0\", \"feature_extractor.lstm.bias_ih_l0\", \"feature_extractor.lstm.bias_hh_l0\", \"feature_extractor.lstm.weight_ih_l0_reverse\", \"feature_extractor.lstm.weight_hh_l0_reverse\", \"feature_extractor.lstm.bias_ih_l0_reverse\", \"feature_extractor.lstm.bias_hh_l0_reverse\", \"feature_extractor.lstm.weight_ih_l1\", \"feature_extractor.lstm.weight_hh_l1\", \"feature_extractor.lstm.bias_ih_l1\", \"feature_extractor.lstm.bias_hh_l1\", \"feature_extractor.lstm.weight_ih_l1_reverse\", \"feature_extractor.lstm.weight_hh_l1_reverse\", \"feature_extractor.lstm.bias_ih_l1_reverse\", \"feature_extractor.lstm.bias_hh_l1_reverse\". \n",
-      "\tUnexpected key(s) in state_dict: \"feature_extractor.spec_conv.0.weight\", \"feature_extractor.spec_conv.0.bias\", \"feature_extractor.spec_conv.1.weight\", \"feature_extractor.spec_conv.1.bias\", \"feature_extractor.spec_conv.2.weight\", \"feature_extractor.spec_conv.2.bias\". \n",
-      "\tsize mismatch for encoder.encoder.conv1.weight: copying a param with shape torch.Size([64, 3, 7, 7]) from checkpoint, the shape in current model is torch.Size([64, 1, 7, 7]).\n",
-      "\tsize mismatch for decoder.conv.weight: copying a param with shape torch.Size([256, 64, 1]) from checkpoint, the shape in current model is torch.Size([256, 128, 1]).\n",
-      "\n",
-      "Set the environment variable HYDRA_FULL_ERROR=1 for a complete stack trace.\n"
+      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_0.pth\n",
+      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_3.pth\n",
+      "[5.4GB(+0.4GB):0.9sec] load model \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [01:18<00:00, 23.79it/s]\n",
+      "[6.6GB(+1.2GB):79.2sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [01:19<00:00, 23.37it/s]\n",
+      "[7.1GB(+0.5GB):82.6sec] inference \n",
+      "[7.2GB(+0.1GB):2.1sec] make submission \n"
      ]
     }
    ],
