Fix bug with prediction of steps that out of borders of series

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# Ideas\n",
     "\n",
+    "- add shifted features\n",
     "- exclude series_ids that aren't labeleled at all\n",
     "- there are series (at least 7) that contain night events but there are no labels at these nights; examples: 03d92c9f6f8a, 05e1944c3818\n",
     "try to find and exclude that nights\n",
-    "- something wrong with submission file (creates steps that aren't exist)\n",
     "\n",
     "- different model type (detr2D, spec1D)\n",
     "- different optimizer (Adam, SGD), increase WD\n",
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_143377/3816933432.py:38: UserWarning: \n",
+      "/tmp/ipykernel_576133/3168496507.py:39: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -45,6 +45,7 @@
     }
    ],
    "source": [
+    "import json\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from hydra import initialize, compose\n",
@@ -63,13 +64,13 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "INFERENCE = False\n",
+    "INFERENCE = True\n",
     "EXP_NAME = \"transformer_dur_8640_folds\"\n",
-    "RUN_NAME = \"run0\"\n",
+    "RUN_NAME = \"run3\"\n",
     "TYPE = \"score\"\n",
     "\n",
     "if INFERENCE:\n",
-    "    RESULT_DIR = Path(\"../output/inference\") / \"transformer_dur_8640_folds\"\n",
+    "    RESULT_DIR = Path(\"../output/inference\") / \"transformer_dur_8640_folds\"  # / RUN_NAME\n",
     "    hydra_result_dir = Path(\"../output/train\") / \"transformer_dur_8640_folds\" / RUN_NAME\n",
     "else:\n",
     "    RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
@@ -93,10 +94,10 @@
     "\n",
     "if INFERENCE:\n",
     "    preds = np.load(RESULT_DIR / f\"preds.npy\")\n",
-    "    preds_0 = np.load(RESULT_DIR / f\"preds_0.npy\")\n",
-    "    preds_1 = np.load(RESULT_DIR / f\"preds_1.npy\")\n",
-    "    keys_0 = np.load(RESULT_DIR / f\"keys_0.npy\")\n",
-    "    keys_1 = np.load(RESULT_DIR / f\"keys_1.npy\")\n",
+    "    # preds_0 = np.load(RESULT_DIR / f\"preds_0.npy\")\n",
+    "    # preds_1 = np.load(RESULT_DIR / f\"preds_1.npy\")\n",
+    "    keys = np.load(RESULT_DIR / f\"keys.npy\")\n",
+    "    # keys_1 = np.load(RESULT_DIR / f\"keys_1.npy\")\n",
     "else:\n",
     "    preds = np.load(RESULT_DIR / f\"preds_{TYPE}.npy\")\n",
     "    labels = np.load(RESULT_DIR / f\"labels_{TYPE}.npy\")\n",
@@ -115,16 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7676517604246242, 24252)"
+       "(0.7769880958002819, 156327)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +144,12 @@
     "\n",
     "\n",
     "def post_process_for_seg(\n",
-    "    keys: list[str], preds: np.ndarray, score_th: float = 0.01, distance: int = 5000\n",
+    "    keys: list[str],\n",
+    "    preds: np.ndarray,\n",
+    "    series_lens: dict,\n",
+    "    score_th: float = 0.01,\n",
+    "    distance: int = 5000,\n",
+    "    offset: int = 0,\n",
     ") -> pl.DataFrame:\n",
     "    \"\"\"make submission dataframe for segmentation task\n",
     "\n",
@@ -153,22 +166,26 @@
     "\n",
     "    records = []\n",
     "    for series_id in unique_series_ids:\n",
+    "        max_step = series_lens[series_id]\n",
+    "\n",
     "        series_idx = np.where(series_ids == series_id)[0]\n",
     "        this_series_preds = preds[series_idx].reshape(-1, 2)\n",
     "\n",
     "        onset_event_preds = this_series_preds[:, 0]\n",
     "        onset_steps = find_peaks(onset_event_preds, height=score_th, distance=distance)[0]\n",
     "        onset_scores = onset_event_preds[onset_steps]\n",
-    "        min_onset_step = min(onset_steps)\n",
+    "        min_onset_step = min(onset_steps) if len(onset_steps) > 0 else 0\n",
     "\n",
     "        wakeup_event_preds = this_series_preds[:, 1]\n",
     "        wakeup_steps = find_peaks(wakeup_event_preds, height=score_th, distance=distance)[0]\n",
     "        wakeup_scores = wakeup_event_preds[wakeup_steps]\n",
-    "        max_wakeup_step = max(wakeup_steps)\n",
+    "        max_wakeup_step = max(wakeup_steps) if len(wakeup_steps) > 0 else 0\n",
+    "\n",
+    "        # print(series_id, max_step, len(this_series_preds))\n",
     "\n",
     "        for step, score in zip(onset_steps, onset_scores):\n",
     "            # select only wakeups than has at least one onset before\n",
-    "            if step >= max_wakeup_step or step <= 720 or step >= len(this_series_preds) - 720 * 8:\n",
+    "            if step >= max_wakeup_step or step <= 720 or step >= max_step - 720 * offset:\n",
     "                continue\n",
     "\n",
     "            records.append(\n",
@@ -182,7 +199,7 @@
     "\n",
     "        for step, score in zip(wakeup_steps, wakeup_scores):\n",
     "            # select only onsets than has at least one wakeup after\n",
-    "            if step <= min_onset_step or step <= 720 * 8 or step >= len(this_series_preds) - 720:\n",
+    "            if step <= min_onset_step or step <= 720 * offset or step >= max_step - 180:\n",
     "                continue\n",
     "\n",
     "            records.append(\n",
@@ -211,9 +228,11 @@
     "    return sub_df\n",
     "\n",
     "\n",
-    "pred_df = post_process_for_seg(keys, preds, score_th=0.0005, distance=70)\n",
-    "\n",
+    "with open(Path(cfg.dir.processed_dir) / \"train\" / \"series_lens.json\") as f:\n",
+    "    series_lens = json.load(f)\n",
+    "pred_df = post_process_for_seg(keys, preds, series_lens, score_th=0.0005, distance=70, offset=8)\n",
     "pred_df = pred_df.to_pandas()\n",
+    "\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
     "\n",
     "score, len(pred_df)"
@@ -221,12 +240,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['854206f602d0_0000000', '854206f602d0_0000001',\n",
+       "       '854206f602d0_0000002', ..., '3318a0e3ed6f_0000075',\n",
+       "       '3318a0e3ed6f_0000076', '3318a0e3ed6f_0000077'], dtype='<U20')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.7769880964939402, 156323)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (0.7671295523259689, 24243)\n",
-    "# (0.7676516649051126, 24256) - without 4"
+    "# (0.7676517729566479, 24249)"
    ]
   },
   {
@@ -447,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -472,14 +512,11 @@
      "text": [
       "Global seed set to 42\n",
       "[5.0GB(+3.9GB):1.9sec] load test dataloader \n",
-      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_0.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_3.pth\n",
-      "[5.4GB(+0.4GB):0.9sec] load model \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:18<00:00, 23.79it/s]\n",
-      "[6.6GB(+1.2GB):79.2sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:19<00:00, 23.37it/s]\n",
-      "[7.1GB(+0.5GB):82.6sec] inference \n",
-      "[7.2GB(+0.1GB):2.1sec] make submission \n"
+      "[5.3GB(+0.3GB):0.5sec] load model \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [01:20<00:00, 23.16it/s]\n",
+      "[6.5GB(+1.2GB):80.7sec] inference \n",
+      "[6.5GB(+0.1GB):2.1sec] make submission \n"
      ]
     }
    ],
