Add shifted anglez and enmo

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_576133/3168496507.py:39: UserWarning: \n",
+      "/tmp/ipykernel_576133/1622644878.py:39: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -113,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7769880958002819, 156327)"
+       "(0.8029239314812877, 150654)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -471,11 +471,14 @@
      "text": [
       "Global seed set to 42\n",
       "[5.0GB(+3.9GB):1.9sec] load test dataloader \n",
+      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_0.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_3.pth\n",
-      "[5.3GB(+0.3GB):0.5sec] load model \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:20<00:00, 23.16it/s]\n",
-      "[6.5GB(+1.2GB):80.7sec] inference \n",
-      "[6.5GB(+0.1GB):2.1sec] make submission \n"
+      "[5.4GB(+0.4GB):0.9sec] load model \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [01:23<00:00, 22.41it/s]\n",
+      "[6.6GB(+1.2GB):83.4sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [01:19<00:00, 23.58it/s]\n",
+      "[7.1GB(+0.5GB):81.4sec] inference \n",
+      "[7.2GB(+0.1GB):2.1sec] make submission \n"
      ]
     }
    ],
