--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -1,6 +1,60 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (13, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>day</th><th>value</th><th>day_shiftp</th><th>day_shiftn</th></tr><tr><td>i64</td><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>1</td><td>1</td><td>null</td><td>1</td></tr><tr><td>1</td><td>2</td><td>null</td><td>3</td></tr><tr><td>1</td><td>2</td><td>1</td><td>3</td></tr><tr><td>3</td><td>3</td><td>1</td><td>3</td></tr><tr><td>3</td><td>5</td><td>1</td><td>5</td></tr><tr><td>3</td><td>2</td><td>3</td><td>5</td></tr><tr><td>5</td><td>1</td><td>3</td><td>8</td></tr><tr><td>5</td><td>2</td><td>3</td><td>8</td></tr><tr><td>8</td><td>7</td><td>5</td><td>9</td></tr><tr><td>8</td><td>3</td><td>5</td><td>9</td></tr><tr><td>9</td><td>5</td><td>8</td><td>9</td></tr><tr><td>9</td><td>3</td><td>8</td><td>null</td></tr><tr><td>9</td><td>4</td><td>9</td><td>null</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (13, 4)\n",
+       "┌─────┬───────┬────────────┬────────────┐\n",
+       "│ day ┆ value ┆ day_shiftp ┆ day_shiftn │\n",
+       "│ --- ┆ ---   ┆ ---        ┆ ---        │\n",
+       "│ i64 ┆ i64   ┆ i64        ┆ i64        │\n",
+       "╞═════╪═══════╪════════════╪════════════╡\n",
+       "│ 1   ┆ 1     ┆ null       ┆ 1          │\n",
+       "│ 1   ┆ 2     ┆ null       ┆ 3          │\n",
+       "│ 1   ┆ 2     ┆ 1          ┆ 3          │\n",
+       "│ 3   ┆ 3     ┆ 1          ┆ 3          │\n",
+       "│ …   ┆ …     ┆ …          ┆ …          │\n",
+       "│ 8   ┆ 3     ┆ 5          ┆ 9          │\n",
+       "│ 9   ┆ 5     ┆ 8          ┆ 9          │\n",
+       "│ 9   ┆ 3     ┆ 8          ┆ null       │\n",
+       "│ 9   ┆ 4     ┆ 9          ┆ null       │\n",
+       "└─────┴───────┴────────────┴────────────┘"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pl.DataFrame(\n",
+    "    dict(\n",
+    "        day=[1, 1, 1, 3, 3, 3, 5, 5, 8, 8, 9, 9, 9],\n",
+    "        value=[1, 2, 2, 3, 5, 2, 1, 2, 7, 3, 5, 3, 4],\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "df = df.with_columns(pl.col(\"day\").shift(2).alias(\"day_shiftp\"))\n",
+    "df = df.with_columns(pl.col(\"day\").shift(-2).alias(\"day_shiftn\"))\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
