Exclude strange series, do not add negative samples that are too close to positive

--- a/run/train.ipynb
+++ b/run/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,28 +105,7 @@
     "\n",
     "datamodule = SleepDataModule(cfg)\n",
     "\n",
-    "x = datamodule.val_dataloader()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([8, 4, 17280])\n",
-      "torch.Size([8, 8640, 3])\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in x:\n",
-    "    print(i['feature'].shape)\n",
-    "    print(i['label'].shape)\n",
-    "    break"
+    "x = datamodule.train_dataloader()\n"
    ]
   }
  ],
