--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,24 +6,22 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- exclude series_ids that aren't labeleled at all\n",
-    "- delete strange nights\n",
-    "\n",
     "- offset 25, 30 for your best model\n",
     "- different model type (detr2D, spec1D)\n",
-    "- train on full data\n",
-    "- weight models\n",
     "\n",
     "- gaussian loss\n",
     "- different mixup / cutmix ratio\n",
     "\n",
-    "What works and give boost but overfits:\n",
+    "Also:\n",
+    "- try fold 10 for different folds\n",
+    "- train on full data\n",
+    "- weight models\n",
+    "\n",
+    "What works and gives boost but overfits:\n",
     "- LSTM encoder\n",
     "- resnet50\n",
     "- low WD\n",
-    "Should try all of this if excluding labels works\n",
-    "\n",
-    "- try fold 10 for different folds"
+    "Should try all of this if something above works or try it for folds 1, 2, 4."
    ]
   },
   {
