--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,14 +6,11 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- offset 25, 30 for your best model\n",
+    "- analyze number of onsets / wakeups by hour and filter them during postprocessing\n",
     "- different model type (detr2D, spec1D)\n",
-    "\n",
-    "- gaussian loss\n",
     "- different mixup / cutmix ratio\n",
     "\n",
     "Also:\n",
-    "- try fold 10 for different folds\n",
     "- train on full data\n",
     "- weight models\n",
     "\n",
@@ -21,6 +18,8 @@
     "- LSTM encoder\n",
     "- resnet50\n",
     "- low WD\n",
+    "- duration 17280\n",
+    "- gaussian loss\n",
     "Should try all of this if something above works or try it for folds 1, 2, 4."
    ]
   },
