Improve prediction postprocessing

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,22 +6,20 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- if before and after event there are two or more close (less than half of hour) different events - remove this event\n",
-    "- if event is alone (more than 2 hour before and after this event) and the next event is the same - remove it\n",
-    "\n",
-    "- power averaging\n",
-    "- repeat the same for 3 fols\n",
     "- different mixup / cutmix ratio\n",
-    "\n",
-    "- train on full data, add to ensemble\n",
+    "- power averaging\n",
     "- weight models by their CV/LB scores\n",
+    "\n",
+    "- try with 4 folds\n",
+    "- try with 6 folds\n",
+    "- try with full data\n",
+    "\n",
+    "- try again gaussian loss\n",
     "\n",
     "What works and gives boost but overfits:\n",
     "- LSTM encoder (0.772/~0.722)\n",
     "- resnet50 (0.780/0.722)\n",
-    "- duration 17280 (0.772/0.722)\n",
-    "- (maybe) gaussian loss\n",
-    "Should try it for folds 1, 2, 4."
+    "- duration 17280 (0.772/0.722)"
    ]
   },
   {
@@ -30,10 +28,36 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
+       "                (function() {\n",
+       "                    if (window.IPython === undefined) {\n",
+       "                        return\n",
+       "                    }\n",
+       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
+       "                        \"jupyter_black in a non-lab notebook with \" +\n",
+       "                        \"`is_lab=True`. Please double check, and if \" +\n",
+       "                        \"loading with `%load_ext` please review the README!\"\n",
+       "                    console.log(msg)\n",
+       "                    alert(msg)\n",
+       "                })()\n",
+       "                </script>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1364183/2323575970.py:39: UserWarning: \n",
+      "/tmp/ipykernel_1499149/871821670.py:39: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -61,9 +85,9 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "INFERENCE = False\n",
-    "EXP_NAME = \"transformer_dur_8640_folds\"\n",
-    "RUN_NAME = \"run0\"\n",
+    "INFERENCE = True\n",
+    "EXP_NAME = \"transformer_best_folds\"\n",
+    "RUN_NAME = \"run2\"\n",
     "TYPE = \"score\"\n",
     "\n",
     "if INFERENCE:\n",
@@ -110,16 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7692776067800269, 23789)"
+       "(0.8114415378352828, 82347)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,74 +182,74 @@
     "    mask = sub_df[\"next_wakeup_step\"] - sub_df[\"step\"] >= event_threshold\n",
     "    sub_df.loc[mask, \"to_del\"] = 1\n",
     "\n",
-    "    # # detect alone onset event that are between two other onset events and delete them\n",
-    "    # # onset\n",
-    "    # alone_threshold = 2880\n",
-    "    # mask_1 = (\n",
-    "    #     sub_df[\"step\"] - sub_df[\"prev_onset_step\"].shift(1)\n",
-    "    #     < sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"]\n",
-    "    # )\n",
-    "    # mask_2 = sub_df[\"step\"] - sub_df[\"prev_onset_step\"].shift(1) >= alone_threshold\n",
-    "    # mask_3 = (\n",
-    "    #     sub_df[\"next_onset_step\"].shift(-1) - sub_df[\"step\"]\n",
-    "    #     < sub_df[\"next_wakeup_step\"] - sub_df[\"step\"]\n",
-    "    # )\n",
-    "    # mask_4 = sub_df[\"next_onset_step\"].shift(-1) - sub_df[\"step\"] >= alone_threshold\n",
-    "    # mask_5 = sub_df[\"event\"] == \"onset\"\n",
-    "    # mask_6 = sub_df[\"score\"] < 0.1\n",
-    "    # sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
+    "    # detect alone onset event that are between two other onset events and delete them\n",
+    "    # onset\n",
+    "    alone_threshold = 2880\n",
+    "    mask_1 = (\n",
+    "        sub_df[\"step\"] - sub_df[\"prev_onset_step\"].shift(1)\n",
+    "        < sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"]\n",
+    "    )\n",
+    "    mask_2 = sub_df[\"step\"] - sub_df[\"prev_onset_step\"].shift(1) >= alone_threshold\n",
+    "    mask_3 = (\n",
+    "        sub_df[\"next_onset_step\"].shift(-1) - sub_df[\"step\"]\n",
+    "        < sub_df[\"next_wakeup_step\"] - sub_df[\"step\"]\n",
+    "    )\n",
+    "    mask_4 = sub_df[\"next_onset_step\"].shift(-1) - sub_df[\"step\"] >= alone_threshold\n",
+    "    mask_5 = sub_df[\"event\"] == \"onset\"\n",
+    "    mask_6 = sub_df[\"score\"] < 0.1\n",
+    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
     "\n",
-    "    # # wakeup\n",
-    "    # mask_1 = (\n",
-    "    #     sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"].shift(1)\n",
-    "    #     < sub_df[\"step\"] - sub_df[\"prev_onset_step\"]\n",
-    "    # )\n",
-    "    # mask_2 = sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"].shift(1) >= alone_threshold\n",
-    "    # mask_3 = (\n",
-    "    #     sub_df[\"next_wakeup_step\"].shift(-1) - sub_df[\"step\"]\n",
-    "    #     < sub_df[\"next_onset_step\"] - sub_df[\"step\"]\n",
-    "    # )\n",
-    "    # mask_4 = sub_df[\"next_wakeup_step\"].shift(-1) - sub_df[\"step\"] >= alone_threshold\n",
-    "    # mask_5 = sub_df[\"event\"] == \"wakeup\"\n",
-    "    # mask_6 = sub_df[\"score\"] < 0.1\n",
-    "    # sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
+    "    # wakeup\n",
+    "    mask_1 = (\n",
+    "        sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"].shift(1)\n",
+    "        < sub_df[\"step\"] - sub_df[\"prev_onset_step\"]\n",
+    "    )\n",
+    "    mask_2 = sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"].shift(1) >= alone_threshold\n",
+    "    mask_3 = (\n",
+    "        sub_df[\"next_wakeup_step\"].shift(-1) - sub_df[\"step\"]\n",
+    "        < sub_df[\"next_onset_step\"] - sub_df[\"step\"]\n",
+    "    )\n",
+    "    mask_4 = sub_df[\"next_wakeup_step\"].shift(-1) - sub_df[\"step\"] >= alone_threshold\n",
+    "    mask_5 = sub_df[\"event\"] == \"wakeup\"\n",
+    "    mask_6 = sub_df[\"score\"] < 0.1\n",
+    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
     "\n",
-    "    # # delete events that are among many different events\n",
-    "    # # onset\n",
-    "    # close_threshold = 360\n",
-    "    # mask_1 = (\n",
-    "    #     (sub_df[\"event\"].shift(1) == \"wakeup\")\n",
-    "    #     & (sub_df[\"event\"].shift(2) == \"wakeup\")\n",
-    "    #     & (sub_df[\"event\"].shift(3) == \"wakeup\")\n",
-    "    # )\n",
-    "    # mask_2 = (\n",
-    "    #     (sub_df[\"event\"].shift(-1) == \"wakeup\")\n",
-    "    #     & (sub_df[\"event\"].shift(-2) == \"wakeup\")\n",
-    "    #     & (sub_df[\"event\"].shift(-3) == \"wakeup\")\n",
-    "    # )\n",
-    "    # mask_3 = sub_df[\"event\"] == \"onset\"\n",
-    "    # mask_4 = sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"] <= close_threshold\n",
-    "    # mask_5 = sub_df[\"next_wakeup_step\"] - sub_df[\"step\"] <= close_threshold\n",
-    "    # mask_6 = sub_df[\"score\"] < 0.1\n",
+    "    # delete events that are among many different events\n",
+    "    # onset\n",
+    "    close_threshold = 360\n",
+    "    mask_1 = (\n",
+    "        (sub_df[\"event\"].shift(1) == \"wakeup\")\n",
+    "        & (sub_df[\"event\"].shift(2) == \"wakeup\")\n",
+    "        & (sub_df[\"event\"].shift(3) == \"wakeup\")\n",
+    "    )\n",
+    "    mask_2 = (\n",
+    "        (sub_df[\"event\"].shift(-1) == \"wakeup\")\n",
+    "        & (sub_df[\"event\"].shift(-2) == \"wakeup\")\n",
+    "        & (sub_df[\"event\"].shift(-3) == \"wakeup\")\n",
+    "    )\n",
+    "    mask_3 = sub_df[\"event\"] == \"onset\"\n",
+    "    mask_4 = sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"] <= close_threshold\n",
+    "    mask_5 = sub_df[\"next_wakeup_step\"] - sub_df[\"step\"] <= close_threshold\n",
+    "    mask_6 = sub_df[\"score\"] < 0.1\n",
     "\n",
-    "    # sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
+    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
     "\n",
-    "    # # wakeup\n",
-    "    # mask_1 = (\n",
-    "    #     (sub_df[\"event\"].shift(1) == \"onset\")\n",
-    "    #     & (sub_df[\"event\"].shift(2) == \"onset\")\n",
-    "    #     & (sub_df[\"event\"].shift(3) == \"onset\")\n",
-    "    # )\n",
-    "    # mask_2 = (\n",
-    "    #     (sub_df[\"event\"].shift(-1) == \"onset\")\n",
-    "    #     & (sub_df[\"event\"].shift(-2) == \"onset\")\n",
-    "    #     & (sub_df[\"event\"].shift(-3) == \"onset\")\n",
-    "    # )\n",
-    "    # mask_3 = sub_df[\"event\"] == \"wakeup\"\n",
-    "    # mask_4 = sub_df[\"step\"] - sub_df[\"prev_onset_step\"] <= 360\n",
-    "    # mask_5 = sub_df[\"next_onset_step\"] - sub_df[\"step\"] <= 360\n",
-    "    # mask_6 = sub_df[\"score\"] < 0.1\n",
-    "    # sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
+    "    # wakeup\n",
+    "    mask_1 = (\n",
+    "        (sub_df[\"event\"].shift(1) == \"onset\")\n",
+    "        & (sub_df[\"event\"].shift(2) == \"onset\")\n",
+    "        & (sub_df[\"event\"].shift(3) == \"onset\")\n",
+    "    )\n",
+    "    mask_2 = (\n",
+    "        (sub_df[\"event\"].shift(-1) == \"onset\")\n",
+    "        & (sub_df[\"event\"].shift(-2) == \"onset\")\n",
+    "        & (sub_df[\"event\"].shift(-3) == \"onset\")\n",
+    "    )\n",
+    "    mask_3 = sub_df[\"event\"] == \"wakeup\"\n",
+    "    mask_4 = sub_df[\"step\"] - sub_df[\"prev_onset_step\"] <= 360\n",
+    "    mask_5 = sub_df[\"next_onset_step\"] - sub_df[\"step\"] <= 360\n",
+    "    mask_6 = sub_df[\"score\"] < 0.1\n",
+    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
     "\n",
     "    # remove these events\n",
     "    sub_df = sub_df[sub_df[\"to_del\"] == 0]\n",
@@ -325,7 +349,7 @@
     "\n",
     "with open(Path(cfg.dir.processed_dir) / \"train\" / \"series_lens.json\") as f:\n",
     "    series_lens = json.load(f)\n",
-    "pred_df = post_process_for_seg(keys, preds, series_lens, score_th=0.0005, distance=70, offset=8)\n",
+    "pred_df = post_process_for_seg(keys, preds, series_lens, score_th=0.0015, distance=70, offset=8)\n",
     "# pred_df = pred_df.to_pandas()\n",
     "\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -339,9 +363,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fold 1\n",
+    "\n",
     "# (0.7677272112730485, 24220)\n",
     "\n",
-    "# (0.7692776067800269, 23789)"
+    "# (0.7692776067800269, 23789)\n",
+    "\n",
+    "# (0.7702956053178522, 15515)\n",
+    "\n",
+    "# fold 3"
    ]
   },
   {
@@ -452,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,13 +498,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/home/alex/Kaggle/DSS/output\n",
       "Global seed set to 42\n",
       "[5.0GB(+3.9GB):2.1sec] load test dataloader \n",
       "transformer_best_folds\n",
@@ -484,16 +515,16 @@
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_4.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_6.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_3.pth\n",
-      "[5.6GB(+0.7GB):2.2sec] load model \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:25<00:00, 21.78it/s]\n",
-      "[6.9GB(+1.3GB):85.8sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:23<00:00, 22.28it/s]\n",
-      "[7.4GB(+0.5GB):86.0sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:24<00:00, 22.02it/s]\n",
-      "[7.4GB(+0.0GB):87.0sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:24<00:00, 22.07it/s]\n",
-      "[7.4GB(+0.0GB):86.8sec] inference \n",
-      "[7.5GB(+0.1GB):2.2sec] make submission \n"
+      "[5.7GB(+0.7GB):4.8sec] load model \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:35<00:00, 12.02it/s]\n",
+      "[6.9GB(+1.2GB):156.0sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:34<00:00, 12.11it/s]\n",
+      "[7.4GB(+0.5GB):157.1sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:38<00:00, 11.81it/s]\n",
+      "[7.4GB(+0.0GB):161.0sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:31<00:00, 12.35it/s]\n",
+      "[7.4GB(+0.0GB):153.6sec] inference \n",
+      "[7.4GB(+0.0GB):2.8sec] make submission \n"
      ]
     }
    ],
