--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1499149/871821670.py:39: UserWarning: \n",
+      "/tmp/ipykernel_1571346/2323575970.py:39: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -85,9 +85,9 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "INFERENCE = True\n",
-    "EXP_NAME = \"transformer_best_folds\"\n",
-    "RUN_NAME = \"run2\"\n",
+    "INFERENCE = False\n",
+    "EXP_NAME = \"transformer_dur_8640_folds\"\n",
+    "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
     "\n",
     "if INFERENCE:\n",
@@ -134,222 +134,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8114415378352828, 82347)"
+       "(0.7702807074491725, 15600)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import polars as pl\n",
-    "from scipy.signal import find_peaks\n",
-    "\n",
-    "\n",
-    "def clean_too_far_events(sub_df, event_threshold):\n",
-    "    # delete onset and wakeup events that are too far from next wakeup / previous onset event\n",
-    "    sub_df[\"prev_onset_step\"] = np.nan\n",
-    "    sub_df[\"next_onset_step\"] = np.nan\n",
-    "    sub_df[\"prev_wakeup_step\"] = np.nan\n",
-    "    sub_df[\"next_wakeup_step\"] = np.nan\n",
-    "    sub_df[\"to_del\"] = 0\n",
-    "\n",
-    "    # onset\n",
-    "    mask = sub_df[\"event\"] == \"onset\"\n",
-    "    sub_df.loc[mask, \"prev_onset_step\"] = sub_df.loc[mask, \"step\"]\n",
-    "    sub_df.loc[mask, \"next_onset_step\"] = sub_df.loc[mask, \"step\"]\n",
-    "    sub_df[\"prev_onset_step\"] = sub_df[\"prev_onset_step\"].ffill()\n",
-    "    sub_df[\"next_onset_step\"] = sub_df[\"next_onset_step\"].bfill()\n",
-    "\n",
-    "    mask = sub_df[\"step\"] - sub_df[\"prev_onset_step\"] >= event_threshold\n",
-    "    sub_df.loc[mask, \"to_del\"] = 1\n",
-    "\n",
-    "    # wakeup\n",
-    "    mask = sub_df[\"event\"] == \"wakeup\"\n",
-    "    sub_df.loc[mask, \"prev_wakeup_step\"] = sub_df.loc[mask, \"step\"]\n",
-    "    sub_df.loc[mask, \"next_wakeup_step\"] = sub_df.loc[mask, \"step\"]\n",
-    "    sub_df[\"prev_wakeup_step\"] = sub_df[\"prev_wakeup_step\"].ffill()\n",
-    "    sub_df[\"next_wakeup_step\"] = sub_df[\"next_wakeup_step\"].bfill()\n",
-    "\n",
-    "    mask = sub_df[\"next_wakeup_step\"] - sub_df[\"step\"] >= event_threshold\n",
-    "    sub_df.loc[mask, \"to_del\"] = 1\n",
-    "\n",
-    "    # detect alone onset event that are between two other onset events and delete them\n",
-    "    # onset\n",
-    "    alone_threshold = 2880\n",
-    "    mask_1 = (\n",
-    "        sub_df[\"step\"] - sub_df[\"prev_onset_step\"].shift(1)\n",
-    "        < sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"]\n",
-    "    )\n",
-    "    mask_2 = sub_df[\"step\"] - sub_df[\"prev_onset_step\"].shift(1) >= alone_threshold\n",
-    "    mask_3 = (\n",
-    "        sub_df[\"next_onset_step\"].shift(-1) - sub_df[\"step\"]\n",
-    "        < sub_df[\"next_wakeup_step\"] - sub_df[\"step\"]\n",
-    "    )\n",
-    "    mask_4 = sub_df[\"next_onset_step\"].shift(-1) - sub_df[\"step\"] >= alone_threshold\n",
-    "    mask_5 = sub_df[\"event\"] == \"onset\"\n",
-    "    mask_6 = sub_df[\"score\"] < 0.1\n",
-    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
-    "\n",
-    "    # wakeup\n",
-    "    mask_1 = (\n",
-    "        sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"].shift(1)\n",
-    "        < sub_df[\"step\"] - sub_df[\"prev_onset_step\"]\n",
-    "    )\n",
-    "    mask_2 = sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"].shift(1) >= alone_threshold\n",
-    "    mask_3 = (\n",
-    "        sub_df[\"next_wakeup_step\"].shift(-1) - sub_df[\"step\"]\n",
-    "        < sub_df[\"next_onset_step\"] - sub_df[\"step\"]\n",
-    "    )\n",
-    "    mask_4 = sub_df[\"next_wakeup_step\"].shift(-1) - sub_df[\"step\"] >= alone_threshold\n",
-    "    mask_5 = sub_df[\"event\"] == \"wakeup\"\n",
-    "    mask_6 = sub_df[\"score\"] < 0.1\n",
-    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
-    "\n",
-    "    # delete events that are among many different events\n",
-    "    # onset\n",
-    "    close_threshold = 360\n",
-    "    mask_1 = (\n",
-    "        (sub_df[\"event\"].shift(1) == \"wakeup\")\n",
-    "        & (sub_df[\"event\"].shift(2) == \"wakeup\")\n",
-    "        & (sub_df[\"event\"].shift(3) == \"wakeup\")\n",
-    "    )\n",
-    "    mask_2 = (\n",
-    "        (sub_df[\"event\"].shift(-1) == \"wakeup\")\n",
-    "        & (sub_df[\"event\"].shift(-2) == \"wakeup\")\n",
-    "        & (sub_df[\"event\"].shift(-3) == \"wakeup\")\n",
-    "    )\n",
-    "    mask_3 = sub_df[\"event\"] == \"onset\"\n",
-    "    mask_4 = sub_df[\"step\"] - sub_df[\"prev_wakeup_step\"] <= close_threshold\n",
-    "    mask_5 = sub_df[\"next_wakeup_step\"] - sub_df[\"step\"] <= close_threshold\n",
-    "    mask_6 = sub_df[\"score\"] < 0.1\n",
-    "\n",
-    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
-    "\n",
-    "    # wakeup\n",
-    "    mask_1 = (\n",
-    "        (sub_df[\"event\"].shift(1) == \"onset\")\n",
-    "        & (sub_df[\"event\"].shift(2) == \"onset\")\n",
-    "        & (sub_df[\"event\"].shift(3) == \"onset\")\n",
-    "    )\n",
-    "    mask_2 = (\n",
-    "        (sub_df[\"event\"].shift(-1) == \"onset\")\n",
-    "        & (sub_df[\"event\"].shift(-2) == \"onset\")\n",
-    "        & (sub_df[\"event\"].shift(-3) == \"onset\")\n",
-    "    )\n",
-    "    mask_3 = sub_df[\"event\"] == \"wakeup\"\n",
-    "    mask_4 = sub_df[\"step\"] - sub_df[\"prev_onset_step\"] <= 360\n",
-    "    mask_5 = sub_df[\"next_onset_step\"] - sub_df[\"step\"] <= 360\n",
-    "    mask_6 = sub_df[\"score\"] < 0.1\n",
-    "    sub_df.loc[mask_1 & mask_2 & mask_3 & mask_4 & mask_5 & mask_6, \"to_del\"] = 1\n",
-    "\n",
-    "    # remove these events\n",
-    "    sub_df = sub_df[sub_df[\"to_del\"] == 0]\n",
-    "\n",
-    "    return sub_df\n",
-    "\n",
-    "\n",
-    "def post_process_for_seg(\n",
-    "    keys: list[str],\n",
-    "    preds: np.ndarray,\n",
-    "    series_lens: dict,\n",
-    "    score_th: float = 0.01,\n",
-    "    distance: int = 5000,\n",
-    "    offset: int = 0,\n",
-    ") -> pl.DataFrame:\n",
-    "    \"\"\"make submission dataframe for segmentation task\n",
-    "\n",
-    "    Args:\n",
-    "        keys (list[str]): list of keys. key is \"{series_id}_{chunk_id}\"\n",
-    "        preds (np.ndarray): (num_series * num_chunks, duration, 2)\n",
-    "        score_th (float, optional): threshold for score. Defaults to 0.5.\n",
-    "\n",
-    "    Returns:\n",
-    "        pl.DataFrame: submission dataframe\n",
-    "    \"\"\"\n",
-    "    series_ids = np.array(list(map(lambda x: x.split(\"_\")[0], keys)))\n",
-    "    unique_series_ids = np.unique(series_ids)\n",
-    "\n",
-    "    records = []\n",
-    "    for series_id in unique_series_ids:\n",
-    "        max_step = series_lens[series_id]\n",
-    "\n",
-    "        series_idx = np.where(series_ids == series_id)[0]\n",
-    "        this_series_preds = preds[series_idx].reshape(-1, 2)\n",
-    "\n",
-    "        onset_event_preds = this_series_preds[:, 0]\n",
-    "        onset_steps = find_peaks(onset_event_preds, height=score_th, distance=distance)[0]\n",
-    "        onset_scores = onset_event_preds[onset_steps]\n",
-    "        min_onset_step = min(onset_steps) if len(onset_steps) > 0 else 0\n",
-    "\n",
-    "        wakeup_event_preds = this_series_preds[:, 1]\n",
-    "        wakeup_steps = find_peaks(wakeup_event_preds, height=score_th, distance=distance)[0]\n",
-    "        wakeup_scores = wakeup_event_preds[wakeup_steps]\n",
-    "        max_wakeup_step = max(wakeup_steps) if len(wakeup_steps) > 0 else 0\n",
-    "\n",
-    "        for step, score in zip(onset_steps, onset_scores):\n",
-    "            # select only wakeups than has at least one onset before\n",
-    "            # and not too close to series borders\n",
-    "            if step >= max_wakeup_step or step <= 720 or step >= max_step - 720 * offset:\n",
-    "                continue\n",
-    "\n",
-    "            records.append(\n",
-    "                {\n",
-    "                    \"series_id\": series_id,\n",
-    "                    \"step\": step,\n",
-    "                    \"event\": \"onset\",\n",
-    "                    \"score\": score,\n",
-    "                }\n",
-    "            )\n",
-    "\n",
-    "        for step, score in zip(wakeup_steps, wakeup_scores):\n",
-    "            # select only onsets than has at least one wakeup after\n",
-    "            # and not too close to series borders\n",
-    "            if step <= min_onset_step or step <= 720 * offset or step >= max_step - 180:\n",
-    "                continue\n",
-    "\n",
-    "            records.append(\n",
-    "                {\n",
-    "                    \"series_id\": series_id,\n",
-    "                    \"step\": step,\n",
-    "                    \"event\": \"wakeup\",\n",
-    "                    \"score\": score,\n",
-    "                }\n",
-    "            )\n",
-    "\n",
-    "    if len(records) == 0:  # If there is no prediction, insert dummy\n",
-    "        records.append(\n",
-    "            {\n",
-    "                \"series_id\": series_id,\n",
-    "                \"step\": 0,\n",
-    "                \"event\": \"onset\",\n",
-    "                \"score\": 0,\n",
-    "            }\n",
-    "        )\n",
-    "\n",
-    "    sub_df = pd.DataFrame(records).sort_values([\"series_id\", \"step\"]).reset_index(drop=True)\n",
-    "    sub_df[\"row_id\"] = np.arange(len(sub_df))\n",
-    "\n",
-    "    # 20 hours\n",
-    "    event_threshold = 14400\n",
-    "    sub_df = clean_too_far_events(sub_df, event_threshold)\n",
-    "\n",
-    "    sub_df = sub_df[[\"row_id\", \"series_id\", \"step\", \"event\", \"score\"]]\n",
-    "\n",
-    "    return sub_df\n",
-    "\n",
-    "\n",
     "with open(Path(cfg.dir.processed_dir) / \"train\" / \"series_lens.json\") as f:\n",
     "    series_lens = json.load(f)\n",
-    "pred_df = post_process_for_seg(keys, preds, series_lens, score_th=0.0015, distance=70, offset=8)\n",
+    "\n",
+    "pred_df = post_process_for_seg(keys, preds, series_lens, score_th=0.001, distance=80, offset=8)\n",
     "# pred_df = pred_df.to_pandas()\n",
     "\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -482,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,33 +301,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/alex/Kaggle/DSS/output\n",
       "Global seed set to 42\n",
-      "[5.0GB(+3.9GB):2.1sec] load test dataloader \n",
-      "transformer_best_folds\n",
-      "/home/alex/Kaggle/DSS/output/train/transformer_best_folds/*.pth\n",
+      "[5.0GB(+3.9GB):2.2sec] load test dataloader \n",
       "List of models: ['/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_0.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_4.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_6.pth', '/home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_3.pth']\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_0.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_4.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_10_6.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_best_folds/fold_3.pth\n",
-      "[5.7GB(+0.7GB):4.8sec] load model \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [02:35<00:00, 12.02it/s]\n",
-      "[6.9GB(+1.2GB):156.0sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [02:34<00:00, 12.11it/s]\n",
-      "[7.4GB(+0.5GB):157.1sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [02:38<00:00, 11.81it/s]\n",
-      "[7.4GB(+0.0GB):161.0sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [02:31<00:00, 12.35it/s]\n",
-      "[7.4GB(+0.0GB):153.6sec] inference \n",
-      "[7.4GB(+0.0GB):2.8sec] make submission \n"
+      "[5.6GB(+0.7GB):2.7sec] load model \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:36<00:00, 11.96it/s]\n",
+      "[6.9GB(+1.3GB):156.2sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:33<00:00, 12.20it/s]\n",
+      "[7.4GB(+0.5GB):156.0sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:29<00:00, 12.47it/s]\n",
+      "[7.4GB(+0.0GB):153.4sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [02:32<00:00, 12.26it/s]\n",
+      "[7.4GB(+0.0GB):158.8sec] inference \n",
+      "14931 (14931, 8640, 2)\n",
+      "[7.4GB(+0.0GB):1.9sec] make submission \n"
      ]
     }
    ],
@@ -539,8 +340,8 @@
     "    batch_size=8\\\n",
     "    duration=$DURATION\\\n",
     "    downsample_rate=$DOWNSAMPLE_RATE\\\n",
-    "    pp.score_th=0.0001\\\n",
-    "    pp.distance=90\\\n",
+    "    pp.score_th=0.0015\\\n",
+    "    pp.distance=70\\\n",
     "    phase=$PHASE\\\n",
     "    best_model=$BEST_MODEL"
    ]
