Return postprocessing as it was

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,14 +6,16 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- consider event only if there is a significant (score > 0.2) and same type event is near (2-3 hour) it \n",
+    "- if new folds work good - add them to ensemble\n",
+    "- decrease submit threshold\n",
     "- power averaging\n",
+    "- cutmix with prob=0.5 works great for fold_1, check it for all good folds\n",
     "\n",
-    "- try with 4 folds\n",
-    "- try with 6 folds\n",
     "- try with full data\n",
+    "- try with 6, 7, 8 folds\n",
     "\n",
     "- try again gaussian loss\n",
+    "- fix DETR\n",
     "\n",
     "What works and gives boost but overfits:\n",
     "- LSTM encoder (0.772/~0.722)\n",
